--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "pinia": "^3.0.1",
+    "tianhe_icon": "^1.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
