--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "feng_icon": "^1.1.0",
     "pinia": "^3.0.1",
     "tianhe_icon": "^1.1.0",
     "vue": "^3.5.13",
