--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
-    "axios": "^1.7.9",
+    "axios": "^1.8.2",
+    "blueimp-md5": "^2.19.0",
     "feng_icon": "^1.1.0",
+    "loadsh": "^0.0.4",
+    "md5": "^2.3.0",
     "pinia": "^3.0.1",
+    "qs": "^6.14.0",
     "tianhe_icon": "^1.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
